syntax = "proto3";

package resourcepb;

option go_package = "github.com/naoto0822/k8s-playground/proto/go/resourcepb";

import "src/types.proto";

service ResourceService {
  rpc GetRamenList(GetRamenRequest) returns (GetRamenResponse);
}

message GetRamenRequest {
  // empty
}

message GetRamenResponse {
  repeated types.Ramen Ramens = 1;
}
